--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Abstracts postmessage into streams and or event emitters.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "./bin/prepublish.sh",
+    "compile": "./bin/compile.sh"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,8 @@
   "bugs": {
     "url": "https://github.com/smallmultiples/postie/issues"
   },
-  "scripts": {
-    "prepublish": "./bin/prepublish.sh"
+  "devDependencies": {
+    "coffee-script": "~1.6.3",
+    "browserify": "~2.28.0"
   }
 }
