Moved from BSD to MIT license for future releases.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "client"
   ],
   "author": "James Hiscock",
-  "license": "BSD",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/smallmultiples/postie/issues"
   },
