--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "postie",
   "version": "0.2.1",
   "description": "Abstracts postmessage into streams and or event emitters.",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
-    "prepublish": "./bin/prepublish.sh",
-    "compile": "./bin/compile.sh"
+    "prepublish": "coffee -o . -c src",
+    "bundle": "npm run prepublish; mkdir dist; browserify -r ./index.js:postie index.js > dist/bundled.js",
+    "test": "npm run bundle; cp dist/bundled.js test/browser/postie.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
     "events",
     "client"
   ],
-  "author": "James Hiscock",
+  "author": "Small Multiples",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/smallmultiples/postie/issues"
@@ -26,5 +27,8 @@
   "devDependencies": {
     "coffee-script": "~1.6.3",
     "browserify": "~2.28.0"
+  },
+  "dependencies": {
+    "readable-stream": "~1.1.9"
   }
 }
