--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prepublish": "coffee -o . -c src",
     "bundle": "npm run prepublish; mkdir dist; browserify -s Postie index.js > dist/bundled.js",
-    "test": "npm run bundle; cp dist/bundled.js test/browser/postie.js"
+    "test": "zuul -- tests/index.js",
+    "test-local": "zuul --local 8080 -- tests/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,10 @@
     "url": "https://github.com/smallmultiples/postie/issues"
   },
   "devDependencies": {
+    "browserify": "^8.1.3",
     "coffee-script": "~1.6.3",
-    "browserify": "~2.28.0"
+    "tape": "^3.5.0",
+    "zuul": "^1.17.1",
+    "zuulnice": "^1.0.0"
   }
 }
